cmake_minimum_required(VERSION 2.8.4)
PROJECT(examples)
include(../dlib/cmake)
find_package(OpenCV QUIET)
if (OpenCV_FOUND)
   include_directories(${OpenCV_INCLUDE_DIRS})

   ADD_EXECUTABLE(webcam_face_pose_ex webcam_face_pose_ex.cpp)
   TARGET_LINK_LIBRARIES(webcam_face_pose_ex dlib ${OpenCV_LIBS} )
else()
   message("OpenCV not found, so we won't build the webcam_face_pose_ex example.")
endif()
